<resources>
    <string name="app_name">Analytics</string>

    <string name="text_key">Key</string>
    <string name="text_value">Value</string>

    <string name="button_simple_event">send simple event</string>
    <string name="button_param_event">param event</string>
    <string name="button_error_event">error event</string>
    <string name="button_user_info">user info</string>

    <string name="title_flurry">Flurry</string>
    <string name="title_ga">Google Analytics</string>

    <string name="text_action">Action</string>
    <string name="text_category">Category</string>
    <string name="title_cl">Crashlytics</string>
    <string name="button_content_view">content view</string>
</resources>
